--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,112 @@
     transform: rotate(360deg);
   }
 }
+
+.catalog-heading{
+  font-size: 36px;
+  font-weight: 700;
+  
+  
+}
+
+
+.catalog-options{
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+
+}
+
+.setlists{
+  background: url('./components/img/готовые_подборки.png');
+  width: 493px;
+  height: 579px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+  display: flex;
+  align-items: end;
+
+}
+
+.middle-container{
+  display: flex;
+  width: 622px;
+  height: 579px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
+}
+
+.envelopes{
+  background: url('./components/img/конверты.png');
+  width: 622px;
+  height: 279px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+  display: flex;
+  align-items: end;
+
+}
+.clothes{
+  background: url('./components/img/одежда_спайка.png');
+  width: 301px;
+  height: 280px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+  display: flex;
+  align-items: end;
+}
+
+.nappies{
+  background: url('./components/img/пеленки.png');
+  width: 301px;
+  height: 280px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+  display: flex;
+  align-items: end;
+
+}
+
+.accessories{
+  background: url('./components/img/аксессуары.png');
+  width: 365px;
+  height: 579px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+  display: flex;
+  align-items: end;
+
+}
+.yellow-acc{
+  background: url('./components/img/подложка_аксессуары.png');
+  width: 365px;
+  height: 77px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+}
+
+.yellow-env{
+  background: url('./components/img/подложка_конверты.png');
+  width: 622px;
+  height: 77px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+}
+
+.yellow-set{
+  background: url('./components/img/подложка_подборки.png');
+  width: 493px;
+  height: 77px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+}
+
+.yellow-min{
+  background: url('./components/img/мини_подложка.png');
+  width: 301px;
+  height: 77px;
+  background-size: cover; /* растягиваем картинку на всю площадь */
+  background-position: center; /* центрируем картинку */
+}
+
