--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -54,7 +54,7 @@
     display: none;
     position: absolute; /* Выпадающий блок */
     left: 0;
-    
+    margin-top: 10px;
     z-index: 100; 
     
 }
