--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -56,7 +56,7 @@
     left: 0;
     margin-top: 10px;
     z-index: 100; 
-    
+
 }
 
 .itemWrapp:hover .modalBlock{
@@ -136,3 +136,6 @@
 .svg:active{
     color: #F7D05E;
 }
+
+
+/* test */
