--- a/client/src/components/Filter.css
+++ b/client/src/components/Filter.css
@@ -183,7 +183,30 @@ input[type="checkbox"]:checked::after {
 }
 
 .multi-range-slider .thumb .caption * {
-display: none ;
+  position: absolute;
+  min-width: 30px;
+  height: 60px;
+  font-size: 18px !important;
+  text-align: center;
+  line-height: 30px;
+  background-color: transparent !important;
+  color: #33394F !important;
+  box-shadow: none !important;
+  padding: 0px 5px;
+  white-space: nowrap;
+}
+
+.multi-range-slider .caption {
+  position: absolute;
+  bottom: -8px !important;
+  width: 2px;
+  height: 2px;
+  left: -15px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: visible;
+  display: block !important;
 }
 
 .multi-range-slider .bar-inner {
@@ -210,42 +233,3 @@ z-index: 1;
 margin: -8px -12px;
 cursor: pointer;
 }
-.range-values span{
-  color: #33394F;
-  font-size: 16px;
-  margin-right: 5px;
-  
-}
-
-
-
-
-/*  
-.slider-value-left, .slider-value-right {
-  position: absolute;
-  top: -30px; 
-  font-weight: bold;
-  background-color: rgba(0, 0, 0, 0.6);
-  color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
-  opacity: 0.9;
-  transform: translate(-50%, 0); 
-  transition: transform 0.2s linear;
-  white-space: nowrap;
-}
-
-.slider-value-left::after, .slider-value-right::after {
-  content: "";
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  width: 0;
-  height: 0;
-  border-top: 5px solid rgba(0, 0, 0, 0.6);
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-}
-
-
-*/
