--- a/client/src/components/BreadСrumbs.css
+++ b/client/src/components/BreadСrumbs.css
@@ -9,8 +9,8 @@
 }
 
 .ul-bread-crumbs{
-    display: 'flex';
-    gap: '5px';
+    display: flex;
+    gap: 5px;
     font-size: 15px;
     list-style-type: none;
 }
